--- a/gb/news2008_4.md
+++ b/gb/news2008_4.md
@@ -30,8 +30,7 @@ Kia Telluride的外型以方方正正为设计概念，有别于Sorento，进风口设计仍是.........<
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11697557.md#1" target="_blank">看完电影 小女孩隔天送街友圣誔礼物 街友哭了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11697557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4e1b5815bab4bf3879ad445e83acb099-150x120.png" align ="left"></a>大部分的孩都很喜欢过 圣誔节，因为可以收到梦......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:37 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank">下一个爱因斯坦？9岁童9个月读完大学创纪录</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/66211d032f36c9521c8e0efa0c5e89ea-150x120.jpg" align ="left"></a>在台湾9岁大的孩子还在念小3，说到大学毕业那是13年后的事情；但比利时男孩9岁的洛朗?西蒙斯（Laurent Simons）虽然也喜欢看电视、也喜欢和他的狗狗玩。不过，他即将在12月从荷兰埃因霍温科技大学毕业，有望成为世界上最年轻的毕业生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701784.md#1" target="_blank">为吓阻猴子入侵 印度农夫将小狗涂画成老虎</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11701784.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-187751192-150x120.jpg" align ="left"></a>有句话说：“画虎不成反类犬”，这比喻人们好高骛远或仿效失真。而在印度却有一名农夫将小狗涂画成一只老虎，以便将恼人的猴子吓跑，据说还真的有效。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706447.md#1" target="_blank">郑存柱：上了“红通”是否一定会被移民局递解？</a><br></h3>持合法签证进入美国的外国人，如果被本国通过国际刑警组织发出了红色通缉令，在现有的政策和实践中，常常会被美国移民海关执法局（ICE）上门抓捕，进入递解程序。能否在移民法庭说服移民法官，通过政治庇护或者结婚等理由，合法留在美国，甚至最终获得绿卡呢？这涉及到不少重要的法律问题。以下，笔者将一一给予详细的分析。
-第一：非政治.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:31 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/28/n11686251.md#1" target="_blank">“保护河流” 墨尔本一华裔家庭志愿清理河道</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/28/n11686251.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/river-150x120.jpg" align ="left"></a>墨尔本一个年轻华裔家庭三年前开始参与清理河道的志愿者活动，并且乐在其中。他们表示参加这样的活动可以使孩子们受益。据《时代报》报导，家住Clifton Hill的华裔王澜（Lan Wong，音译）一家四口三年前开始参与清理河道的志愿者活动，当时王澜三岁的儿子亚历山大（Alexander）还在Abbotsford亚拉河附近.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691798.md#1" target="_blank">塔楼太高 西澳Applecross公寓审批三度被拒</a><br></h3>最近，西澳开发商Mustera Property在Applecross预计承建一座有垂直花园（vertical garden）的环保公寓项目审批第三次遭到当地开发评组驳回，理由为高度超过当地市政府规划要求，目前此开发商正在考虑其它方案以推动项目开展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/11/n11647808.md#1" target="_blank">优质写字楼需求增加 珀斯写字楼市场即将火爆</a><br></h3>商业地产集团Sheffield Property高级写字楼市场专家最近表示，一年来，对珀斯市中心优质办公楼的需求明显增加，这意味着市场已开始反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/30/n11691683.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】房子出租 物业经理需应对的棘手问题</a><br></h3>要成为物业管理经理，首先必须要获得执照。获得执照不难，但是处理物业管理并非易事，需要更多的经验和手段。结合几年物业管理的经验，我整理了房子出租会出现的三个棘手问题，供读者与业主参考。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:30 AM			</td></tr>
