--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703982.md#1" target="_blank">高以翔曾饰演球星吉喆 两人相隔八天先后离世</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191126232934100707-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔11月27日在录制浙江卫视综艺节目时骤逝，当许多人还沉浸在无比的悲痛中时，高以翔曾出演的纪录片《我是马布里》中“杨西亚”一角的原型吉喆，12月5日也因病离世，年仅33岁，令人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11703898.md#1" target="_blank">“加拿大鹅”新招 让人体验寒冷 不卖现货</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11703898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/goose-150x120.jpg" align ="left"></a>加拿大羽绒服品牌“加拿大鹅”（Canada Goose）在多伦多怡陶碧谷的CF Sherway Gardens Mall购物中心新开了一家旗舰店。最奇特的是，这家店竟然不向顾客提供可以立即买走的货品，而是让顾客体验冰雪世界。如果顾客想买看中的羽绒服，可在店里上网购买，衣服当晚送货到家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11703953.md#1" target="_blank">康明凯被关北京一年 国际组织再吁放人</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11703953.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/Capture-5-150x120.jpg" align ="left"></a>因华为财务官孟晚舟在温哥华被抓而被捕的加拿大前外交官康明凯（Michael Kovrig），在北京已被关押了近一年。近日，国际危机组织多位主席联名撰文，再次呼吁中共放人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:09 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11713224.md#1" target="_blank">视觉中国再遭中共网信办约谈 被迫暂停服务</a><br></h3>12月10日，大陆图片网站视觉中国（域名 vcg.com）、IC photo（域名 dfic.cn）均被中共要求暂停服务，进行整改，理由是与大陆外的企业进行互联网新闻信息服务业务的合作等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703488.md#1" target="_blank">【新闻看点】基因编辑再疑造假 贺建奎哪去了</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/5/n11703488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/181128033830100311-150x120.jpg" align ="left"></a>今年年初，《麻省理工学院技术评论（MIT Technology Review）》收到了贺建奎的近5000字研究原稿，并在前天（12月3日）公开了原稿摘要。多名专家表示，贺建奎“明显没有达到自己的目标”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/10/n11712332.md#1" target="_blank">每日三退声明精选（2019/12/09）</a><br></h3>我是建筑商，今年承包了一个政府工程，在外县施工。在承揽工程及施工过程中亲身体会中共的腐败。管工程的要钱，管品质的勒索，管安全的勒索。。。怎么反腐都照贪不误。真是百炼成贪的邪教。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710960.md#1" target="_blank">台最高检：境外资金介入总统大选 全来自中国</a><br></h3>距离2020年总统、立法委员大选倒数32天，针对大选查贿制暴执行成果，其中值得注意的是境外资金介选部分，据最高检察署统计，介选的境外资金多来自中国，且针对总统部分是100%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11709969.md#1" target="_blank">女子谎称误吞奶茶吸管 医生取出30厘米催吐管</a><br></h3>日前，22岁的广州女子小卢前往医院就诊，说自己喝奶茶时不小心将吸管吞入食道。医生检查发现，所谓的“吸管”竟宽约19厘米、长约30厘米。小卢才说，她吞进去的是网购的催吐管。医生告诫，盲目插管对内脏的伤害非常大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:01 PM							</td></tr>
