--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -29,12 +29,12 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11697126.md#1" target="_blank">端看自己值多少</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/3/n11697126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1410052051062483-150x120.jpg" align ="left"></a>生命拥有多大福祉，能不能登上新时代的诺亚方舟，走向光明美好的未来，说白了，端看我们自己值多少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692550.md#1" target="_blank">天地清明引(129) 明光殒－班师回朝1</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/1/n11692550.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/MokoShuraiE-Kotoba_I-150x120.jpg" align ="left"></a>武林各派陷入侯门阴谋，诛杀景阳；纳兰庭芳独战风轩逸，将其打落山崖；祁连义军大寨主白门柳已死，光明顶五万叛军于一夜之间，消失得无影无踪。纳兰令兵士巡山，七日七夜，无有叛军踪迹，只道祁连叛军已灭，班师回朝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank">【命理篇】八字中的《刑妻歌》是怎么回事？</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/95197bbba1ac6ddae66b71c4ad28037a-150x120.jpg" align ="left"></a>命学怎样看“刑妻”？命理歌诀的《刑妻歌》：“天干透出弟兄多，财绝官衰旺太过。月令又逢身旺地，青春年少哭嫦娥。”此歌怎么解？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711048.md#1" target="_blank">台湾古典诗：中美贸易战（二）</a><br></h3>美中谈判鬼胎怀，烽火延烧伏笔埋， 宝岛深耕冲击少，全球贸易扫阴霾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11711045.md#1" target="_blank">新诗：笔织</a><br></h3>笔织， 穿梭于岁月， 用缘缝制天衣。 把时光凝固在诗里， 雕塑世界， 筑梦星空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/9/n11710919.md#1" target="_blank">五绝：仙界</a><br></h3>晨露灿人魂，仙音抹赤痕。 红墙封玉户，白鸽越昆仑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:43 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706294.md#1" target="_blank">因果循环：前夫有钱 却死活不给孩子抚养费</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/6/n11706294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709042153481778-150x120.jpg" align ="left"></a>在房山看守所时，进来一个哭哭啼啼的女子。因为离婚的财产纠葛，她用刀把前夫弄伤了，其前夫告她故意伤害，她就被抓进来了，她觉得特别不公平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:35 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/24/n11677285.md#1" target="_blank">【馨香雅句】愿得一心人，白首不相离</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/11/24/n11677285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/cee43cb7338aef3e36bb9a83ef001770-150x120.jpg" align ="left"></a>在生活中人们都希望有情人终成眷属，但有情人也往往容易心生变故。在生活中面对有情人的心另有所属，该如何解决这难题呢？有这样一个女子，她用一首诗化解了一场婚姻的危机，来听这个故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/7/n11707538.md#1" target="_blank">童诗：走过冬天的小巷</a><br></h3>我慢慢的走过冬天的小巷，
 冬天的云飘在我头上，
 好像在对我说:“你好吗?”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11695167.md#1" target="_blank">唐浩：真相终大白</a><br></h3> 暴谎迷众眼   只手妄遮天   真相一朝撼   善恶报在前......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 12:08 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/2/n11695166.md#1" target="_blank">唐浩：红朝恶有报</a><br></h3>赤龙祸世霾满天   妖谎名利惑凡仙   癫狂倏尽法网落   万匪惊逃惧无眠......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/news2007_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_3.htm">http://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
