--- a/gb/ncid283_2.md
+++ b/gb/ncid283_2.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank">确保稀土供应 美军采取自二战以来紧急行动</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11716268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Rareearthoxides-1-600x390-150x120.jpg" align ="left"></a>路透社看到的一份政府文件显示，美军计划为建造稀土加工设施提供资金，这是华盛顿紧急行动的部分举措，目标是确保可用于制造军事武器和电子产品的稀土的国内供应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714790.md#1" target="_blank">纳瓦罗：川普将决定是否12月加税和签协议</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/dc6cd22e23d13b51e1356b98cdb468d5-150x120.jpg" align ="left"></a>美国是否在12月15日对中国商品加征新关税备受各界关注。针对媒体关于美中正计划推迟新关税的报导，白宫贸易顾问彼得?纳瓦罗（Peter Navarro）周二（12月10日）表示，总统川普（特朗普）将是就关税和美中贸易协议做出最终决定的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank">外媒：与华为签约换贸易 中共施压法罗群岛</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/5G-150x120.jpg" align ="left"></a>丹麦《贝林时报》报导称，中共驻丹麦大使向法罗群岛施压，要求其与华为公司签署5G合同，否则双方一项重要贸易协定将被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank">香港客户遭政审 大陆沿海小商户经济受损</a><br></h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/11/n11714683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_Hkg4639783-150x120.jpg" align ="left"></a>自6月以来，香港反送中运动持续延烧，北京采取各种方式阻止真相传入大陆。近日传出，大陆沿海多家小商户遭到警方严查，被询问香港客户的政治立场，如果支持抗争者就会被控“港独”遭到封杀，这导致许多小商户的经济损失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/13/n11721310.md#1" target="_blank">【世界十字路口】会客室：债务风暴席卷中国</a><br></h3>曾为世界500强企业之一的“天津物产集团”，12月12日宣布完成11亿美元的债务重整，相当于宣告债券违约，引发国际媒体竞相关注中国债务危机。中国债务问题会不会对香港、台湾等地带来影响？中国地方政府的债务问题又有多严峻？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/19/12/12/n11718729.md#1" target="_blank">中共经济会议结束  承认经济下行压力大</a><br></h3>12月10日至12日的中共中央经济工作会议承认经济下行压力加大，再提“稳定”，并被指可能还将以“放水”刺激经济，此前有分析指官方的“稳定”之说难以解决中国经济困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/alzmt2820/djy/blob/master/gb/ncid283_2.md#1<br><a href="https://github.com/alzmt2820/djy/blob/master/gb/ncid283_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/alzmt2820/djy/blob/master/gb/ncid283_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_2.htm">http://www.epochtimes.com/gb/ncid283_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
