--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -18,8 +18,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank">王友群：“香港人权法”有助香港国际地位</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db602cd78fca64_ttl7daykzf_86c475e41a499-150x120.jpg" align ="left"></a>11月27日，美国总统川普签署《香港人权与民主法案》。中共立即炸了锅，“强烈抗议”、“坚决反对”等都跑出来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank">胡少江：北京在香港遭遇滑铁卢之后</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3019-11-2210.50-150x120.jpg" align ="left"></a>中央和香港特区两级政府在香港区议会的选举中输得很难看！从表面上看在选举中输掉的仅仅是建制派在区议会的多数席位，但是这次选举本质上是一次香港的草根民主派与北京操纵的建制派的对垒，他们之间的输赢绝对不仅仅是候选人个人的问题，而是他们所代表的政治主张的胜败。这次选举实际是一次全民公投，即是对中央政府对香港政策的一次公投，是对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706988.md#1" target="_blank">陈思敏：台湾11家银行踩雷中国国储能源的背后</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/150120083250100615-150x120.jpg" align ="left"></a>跨年之际，中国各类债务爆雷不断。12月6日消息证实，中国国储能源子公司上海国储能源在香港发行的4亿美元离岸债违约，而参贷行多达23家银行遍及亚洲金融机构。其中最大苦主要算台湾金融业者，目前11家银行踩雷初估曝险部位合计约新台币51亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711158.md#1" target="_blank">吕锡民：水下物联网如何实现智能海洋</a><br></h3>对人类而言，海洋不仅拥有大量石油、天然气和鱼类资源，而且还是国际贸易的重要渠道和潜在能源，如潮汐能和洋流发电。然而，由于水下环境的复杂性和水下设备的昂贵，海洋仍然缺乏智能和方便上的应用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:55 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711120.md#1" target="_blank">向真：中共操弄法律 预先裁决</a><br></h3>近日明慧网报导，广东省法轮功学员林丽珍，与儿子吴朝棋、妹妹林燕梅一家三人被国保大队非法绑架，茂名市中级法院通知律师在十一月十五日提交辩护词。十二月二日，中级法院非法裁定：维持原判。离谱的是，裁定书的落款日期却是二零一九年十一月十二日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:46 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank">程晓容：华为251折射中共司法冤案黑幕</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为“251”是一颗炸弹，把许多人从“中国梦”中惊醒。一个表面上代表民族实力的品牌企业，它的“狼性”折射出其主人的非人化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709675.md#1" target="_blank">【投书】一位大陆律师与司法局律协的对话</a><br></h3>《刑事诉讼法》第35条：律师的职责辩护人的责任是根据事实和法律，提出证明犯罪嫌疑人、被告人无罪、罪轻或者减轻、免除其刑事责任的材料和意见，维护犯罪嫌疑人、被告人的合法权益。 
 《律师法》第37条规定“律师在执业活动中的人身权利不受侵犯”“律师在法庭上发表的代理、辩护意见不受法律追究。
 这两条法律规定在实际应用中存在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:19 PM			</td></tr>
@@ -45,5 +44,9 @@
 同一日，针对美国总统特朗普上月底签署《香港人权与民主法案》，CCTV中文网又在脸书上贴.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a><br></h3>看过电影《刘三姐》的，一定会被影片一开始的画面所吸引，只见青山绿水间，小舟正在清澈见底的河面上捕鱼，鱼鸥在水面翻腾往来，把鱼送给船头站立着的老翁，这时美丽的歌声从远处顺着江水传来，远远望去，一位美丽的姑娘如同天仙一样飘来，你的心中会自然而然的生出一念，这是神仙来了吗？她就是歌神刘三姐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707550.md#1" target="_blank">张林：贸易战中美经济对比天壤之别</a><br></h3>美国劳工部周五称，11月份全国增加了266,000个工作岗位，这个增长速度，仅次于今年1月份312,000个工作岗位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:25 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706853.md#1" target="_blank">理悟：贺美总统签署香港法案后各国跟进立法</a><br></h3>一花引来百花开，寒梅傲雪报春来。
+冰融霜消残冬尽，万紫千红看精彩。
+四面楚歌乌江泪，共产遗梦七十载。
+万剑齐诛幽灵鬼，饮恨绝命中南海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
