--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -4,7 +4,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/7/11/n2586636.md#1" target="_blank">考生不守礼数丢状元</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/7/11/n2586636.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/d2a26e882e3021bb7c80d8175af7a9c9-150x120.jpg" align ="left"></a>清朝时，福建人王命岳进京赶考。一天，他在半路上遇到了大雨，只得到附近的村舍中避雨。说来也非常神奇，接待他的那户人家的主人头天晚上做了一个非常清晰的梦，梦中有神告诉他：明日王状元就要来你家，你要好生接待。果然第二天就真有一个王姓考生前来投宿，那户人家的主人高兴不已，认为昨天的那个梦应验了，对王命岳非常的殷勤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/3/n11697126.md#1" target="_blank">端看自己值多少</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/3/n11697126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1410052051062483-150x120.jpg" align ="left"></a>生命拥有多大福祉，能不能登上新时代的诺亚方舟，走向光明美好的未来，说白了，端看我们自己值多少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/1/n11692550.md#1" target="_blank">天地清明引(129) 明光殒－班师回朝1</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/1/n11692550.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/MokoShuraiE-Kotoba_I-150x120.jpg" align ="left"></a>武林各派陷入侯门阴谋，诛杀景阳；纳兰庭芳独战风轩逸，将其打落山崖；祁连义军大寨主白门柳已死，光明顶五万叛军于一夜之间，消失得无影无踪。纳兰令兵士巡山，七日七夜，无有叛军踪迹，只道祁连叛军已灭，班师回朝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank">【命理篇】八字中的《刑妻歌》是怎么回事？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/95197bbba1ac6ddae66b71c4ad28037a-150x120.jpg" align ="left"></a>命学怎样看“刑妻”？命理歌诀的《刑妻歌》：“天干透出弟兄多，财绝官衰旺太过。月令又逢身旺地，青春年少哭嫦娥。”此歌怎么解？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank">【命理篇】八字中的刑妻命是怎么回事？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/15/n11658098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/95197bbba1ac6ddae66b71c4ad28037a-150x120.jpg" align ="left"></a>命学怎样看“刑妻”？命理歌诀的《刑妻歌》：“天干透出弟兄多，财绝官衰旺太过。月令又逢身旺地，青春年少哭嫦娥。”此歌怎么解？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11706294.md#1" target="_blank">因果循环：前夫有钱 却死活不给孩子抚养费</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11706294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709042153481778-150x120.jpg" align ="left"></a>在房山看守所时，进来一个哭哭啼啼的女子。因为离婚的财产纠葛，她用刀把前夫弄伤了，其前夫告她故意伤害，她就被抓进来了，她觉得特别不公平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/24/n11677285.md#1" target="_blank">【馨香雅句】愿得一心人，白首不相离</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/24/n11677285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/cee43cb7338aef3e36bb9a83ef001770-150x120.jpg" align ="left"></a>在生活中人们都希望有情人终成眷属，但有情人也往往容易心生变故。在生活中面对有情人的心另有所属，该如何解决这难题呢？有这样一个女子，她用一首诗化解了一场婚姻的危机，来听这个故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/1/n11693534.md#1" target="_blank">琵琶一曲干戈靖——昭君出塞</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/1/n11693534.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/1204090443121528-150x120.png" align ="left"></a>中国古代四大美女之一的“落雁”——王嫱，字昭君，乳名皓月，晋朝时避晋文帝司马昭之讳，又被称为“明妃”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:53 PM			</td></tr>
