--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -25,9 +25,9 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722256.md#1" target="_blank">五杯酒（上）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1607011640402483-150x120.jpg" align ="left"></a>五杯酒，敬五个永志难忘、却无法再见的人。究竟是什么样的爱，形塑了他，又让他破碎？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11708625.md#1" target="_blank">【命理】孟婆汤真有其事 记得前世女子实证</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11708625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/09/709040123071497-150x120.jpg" align ="left"></a>孟婆汤即迷魂汤让人遗忘过去世记忆，是否真的有这回事呢？清代赵吉士《寄园寄所寄》记载一记得前生女子，她讲起的阴间的事，与世间所传的无异。她也讲死者转生时必须饮迷魂汤，她怎么没饮呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 11:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710232.md#1" target="_blank">天地清明引(136) 东流水－浩然正气1</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710232.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/4325af0fb8983b64fd5334fb52749c7c-150x120.jpg" align ="left"></a>京城大疫横行，街市萧条，人烟清冷。东市徐屠户便要收摊，远远见到一人，挑着两担柴禾走来。“林二，过来。”徐屠户道。林二招了招手，便然过去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695380.md#1" target="_blank">【才子佳人】颜真卿“尸解成仙”之谜</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/1706010915481456-150x120.jpg" align ="left"></a>782年，节度使李希烈叛乱，朝中议论著准备派兵讨伐，宰相卢杞忌恨颜真卿的刚正，趁机陷害他，上奏说颜真卿德高望重，四方敬仰，如果让他去说服李希烈，不动刀枪即可平定叛乱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695380.md#1" target="_blank">颜真卿“尸解成仙”之谜</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/1706010915481456-150x120.jpg" align ="left"></a>782年，节度使李希烈叛乱，朝中议论著准备派兵讨伐，宰相卢杞忌恨颜真卿的刚正，趁机陷害他，上奏说颜真卿德高望重，四方敬仰，如果让他去说服李希烈，不动刀枪即可平定叛乱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707277.md#1" target="_blank">【三国英雄】之九：汉献帝东归洛阳</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11707277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9-1-150x120.jpg" align ="left"></a>汉朝最后一位皇帝汉献帝和诸葛亮同年出生，同年死亡。汉献帝是东汉第二长寿的皇帝，但也可以说是东汉最惨的皇帝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/30/n11691721.md#1" target="_blank">【馨香雅句】天下谁人不识君</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/30/n11691721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/b7f777405650bed0c1951815373df0bf-150x120.jpg" align ="left"></a>在生活中有很多人才华横溢己却得不到发挥的舞台，郁郁不得志，当自己不被周围人认可的时候，周围有三五知己好友，便非常重要。今天和大家分享这一句诗词“莫愁前路无知己，天下谁人不识君”。来自唐朝诗人之间的友宜故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:07 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726245.md#1" target="_blank">五律：愁</a><br></h3> 钟隐托江水，易安沉小舟。 举杯销不尽，挥笔赋难收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726282.md#1" target="_blank">五绝：玉宇天台</a><br></h3>大雪悠然下，铺天盖地来。 苍茫无尽处，登顶上天台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726257.md#1" target="_blank">台湾古典诗：台北考棚（二）</a><br></h3> 舟车劳顿苦熬煎，兴建考棚输力钱， 济世行仁无望报，急公好义不唐捐；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726258.md#1" target="_blank">诗歌：诗</a><br></h3> 天语化凡声 发抒心志腾 诗吟穹深处 心念向苍生......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:49 PM			</td></tr>
