--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank">文艺复兴四大经典绘画风格与技法</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/5-28-150x120.jpg" align ="left"></a>文艺复兴绘画中出现的Cangiante（换色法）、Chiaroscuro（明暗对照法）、Sfumato（晕涂法）和Unione（统合法）这四种风格迥异的绘画技法被后世广为流传，许多艺术巨匠都曾经出神入化地运用它们创造出辉煌而美丽的艺术珍品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank">天地清明引(125) 明光殒－明光无华3</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>料峭春寒，林织浓雾。转眼日已西斜，景阳盛怒之下，血气攻心，步履凌乱，江湖众人趁势围剿，团团将其围在垓心：“释放玄毒，荼毒武林；杀害我儿，景阳纳命来。”说罢众人齐上，讨命者，除贼者，不可胜计。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank">五律：水（二首）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/IMG_07740-150x120.jpg" align ="left"></a>源头高莫测，何事住凡尘。 长与山川秀，更怀天地仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/5/n11703794.md#1" target="_blank">台湾古典诗：中美贸易战</a><br></h3>美中贸易地雷埋，引爆工商百业乖， 升级转型风险避，全球布局展高怀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:46 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank">青松絮语：沙发的高度</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/1610131459021366-150x120.jpg" align ="left"></a>高度提升后，视野跟着开阔了。整个过程虽然波折，但终于实现了最初的目的。而买沙发的过程也给我们上了生动的一课：高度是我们在任何时候都应关注的问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/5/n11703791.md#1" target="_blank">五律：火</a><br></h3> 从命燧皇志，奋挥千载情。 阿房付尘土，赤壁助豪英。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695165.md#1" target="_blank">唐浩：港殇</a><br></h3>金风鸣泪叶   秋暮颂鸿文   悲壮英魂逝   浩然正气存......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 12:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/2/n11695162.md#1" target="_blank">唐浩：聚心</a><br></h3>穿云万里腾   孤帆四海征   晨昏诉真相   正气天地成......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:11 AM			</td></tr>
