--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -15,18 +15,12 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露怎样的内心世界？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank">诈骗枉法升官 惶惧遭报惨死</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1029639910-150x120.jpg" align ="left"></a>县令发现从这里走水路，可以直通县城。但是，乘船的客商，却总要在这里卸货，再雇用脚夫，从陆路把货物运往县城............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank">凭蘑菇打开世界市场 秘诀：失败是财富绝不放弃</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37c1339eff365b8ee9fe65d06938a073-150x120.jpg" align ="left"></a>仅凭蘑菇，能成为世界级的CEO吗？Green Co.Ltd朴熙珠代表在蘑菇上倾注了一切，建立公司37年之际，已经出口到四十多个国家，每年销售额达到1000亿韩元。韩国国内市场上流通的蘑菇，其中一半是张代表公司的产品。韩国国内八个工厂每天生产的蘑菇量高达八吨，另外还设有海外工厂，仅中国、英国、德国三国就多达六处。生产于庆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717064.md#1" target="_blank">林园水塘部 （上）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/KokyoL0059-150x120.jpg" align ="left"></a>十二世纪平安时代日本，专门为京城供应鲤鱼的渔夫意外身亡，深爱着丈夫的遗孀，为了完成丈夫未了的工作，踏上一段送鲤鱼的旅程............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank">风行水上，之于新竹</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227012254100093-150x120.jpg" align ="left"></a>离别是为了另一次的重逢。人的一生，每个经历过的城市都是相通的，每个走过的脚印，都是相连的，它一步步带领我到今天，成就今天的我。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711066.md#1" target="_blank">许其正：捉沙马</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/2f58294346dfc3ef365b8e573c1ef09e-150x120.jpg" align ="left"></a> 多少乐趣，寄放在捉沙马上。  和螃蟹一样横着跑，却长手长脚，跑得真快。好会跑的沙马！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709428.md#1" target="_blank">天地清明引(134) 东流水－大疫横行3</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>转眼七日已过，户部尚书富察江赞上书皇甫，言京中药草告急，户部亟需银子，置办药草。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11690780.md#1" target="_blank">品读唐诗：把塞外雪比作梨花的奇诗</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11690780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ef8a5bb192b5c866e0a01191d1d48a02-150x120.png" align ="left"></a>生活在北方的人们，几乎年年都能看到雪。皑皑冰雪，纯洁无瑕，不仅在寒冬妆点了大地，预示来年的丰收，还丰富了人们的户外活动。从古到今，有谁不爱雪呢？文采飞扬的诗人们，更喜欢用雅俗共赏的诗句来歌咏它。比如东晋才女谢道韫形容雪“未若柳絮因风起”，非常轻盈优美；唐代诗仙李白说“燕山雪花大如席”，一派壮阔雄浑；北宋文豪苏轼还说“光.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/27/n3097258.md#1" target="_blank">道士神游天曹见榜单 北宋大臣改名早注定</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/27/n3097258.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/1604211458082483-150x120.jpg" align ="left"></a>道士随即开始做法，跪伏于坛上，直至第二天凌晨四更时都凝然不动，大家好奇地触碰他，他依然一动不动，身体还有些僵硬。到了五更天，道士的手足这才微微动了起来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715330.md#1" target="_blank">【爸妈必修课】“我笨吗？” 父母的不当言行</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15ddc36914408507_ttl7dayyi3_shutterstock_1289722432-150x120.jpg" align ="left"></a>
-【爸妈必修课】（8）视频：做父母千万不能这样！家长的不当言行会带给孩子深刻影响
-
-
-本文刊载于旧金山12月7日教育版
-每周为您献上旧金山最新消息
-责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:18 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721346.md#1" target="_blank">五律：寂</a><br></h3>飘地鹅毛响，接天云影回。 蝉吟如夏吼，人语作冬雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718664.md#1" target="_blank">台湾古典诗：台北考棚</a><br></h3> 腾云浩气火车头，带动鹃城学术遒， 此地布金怀故老，他山攻玉萃名流；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:12 PM			</td></tr>
